tests/invalidTest/other/const_const_unvalid_type64.q
# EXPECT type cannot be converted
def void errorType(){
    sint64 a = 9223372036854775808
}